--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ button:hover {
   display: flex;
 }
 .members {
+  padding-top: 15vh;
   padding-left: 4%;
   padding-right: 4%;
   font-size: 20px;
