--- a/style.css
+++ b/style.css
@@ -107,13 +107,27 @@ button:hover {
   /*change vertical positioning of the sample picture*/
   padding-top: 5%;
   /*change horizontal positioning of the sample picture*/
-  padding-left: 20%;
+  /*padding-left: 20%;*/
+  font-size: 40px;
+}
+#sampleHeader {
+  padding-bottom: 5%;
+}
+#sampleImage {
+    margin-top: 5%;
+    width: 78vw;
+    height: 70vh;
+    border: 1px white solid;
 }
 
 
 /*Quickstart*/
+#quickstart {
+  text-align: left;
+}
 #quickstart h1{
-  padding-top: 7vh;
+  padding-top: 8vh;
+  padding-bottom: 5vh;
   text-align: center;
   font-size: 40px;
 }
@@ -151,6 +165,7 @@ button:hover {
 .members img {
   width: 100%;
   height: 60%;
+  border-radius: 50%;
 }
 .members a {
   color: white;
