add media query for icon and margin

--- a/style.css
+++ b/style.css
@@ -124,6 +124,23 @@ body{
     padding-left: 20px;
     line-height: 50px !important;
   }
+
+
+  #mainLogo {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    height: 75px;
+    margin-left: 40%;
+  }
+  #homeButton, #sampleButton, #quickstartButton, #contactButton {
+    text-align: center;
+    font-size: 16px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
+  .members img {
+    width: 30%;
+  }
 }
 @media (min-width: 767px) {
   .nav-side-menu .menu-list .menu-content {
@@ -134,26 +151,25 @@ body{
   	float: right;
     padding: 5%;
   }
-}
 
-
-
-#home, #sample, #quickstart, #contact {
-  margin-bottom: 10%;
-  height: auto;
-}
-
-.glyphicon {
-  background-color: transparent;
-}
 
   #mainLogo {
-    /*margin-top: 15%;
-    margin-bottom: 15%;*/
-    width: 250px;
+    margin-top: 15%;
+    margin-bottom: 15%;
+    width: 200px;
     height: auto;
-    text-align: center;
   }
+  #homeButton, #sampleButton, #quickstartButton, #contactButton {
+    text-align: center;
+    padding-right: 10%;
+    font-size: 22px;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+  .members img {
+      width: 75%;
+  }
+}
 
 /*down buttons*/
 /*#quickstart, #sample, #home {
@@ -182,10 +198,6 @@ button:hover {
   width:100%;
 }
 
-#homeButton, #sampleButton, #quickstartButton, #contactButton {
-  text-align: center;
-  padding-right: 10%;
-  font-size: 22px;
-  padding-top: 5%;
-  padding-bottom: 5%;
+.members {
+  border: 1px white solid;
 }
